Fixed/rewrote setOnce for static variables and relevant tests. Updated junit version because of test compilation errors